--- a/Darky/DarkMode Switcher/fr.lproj/Localizable.strings
+++ b/Darky/DarkMode Switcher/fr.lproj/Localizable.strings
@@ -11,7 +11,7 @@
 "enable_start_up_login" = "Démarrer au lancement de l'ordinateur";
 "settings" = "Préférences";
 "quit_app" = "Quitter";
-"about" = "À propos de DarkMode Switcher";
+"about" = "À propos de Darky";
 "cancel" = "Annuler";
 "ok" = "Oui";
 "product_is_up_to_date" = "Votre application est déjà à jour";
