--- a/Darky/DarkMode Switcher/en-GB.lproj/Localizable.strings
+++ b/Darky/DarkMode Switcher/en-GB.lproj/Localizable.strings
@@ -6,12 +6,12 @@
  Copyright © 2018 Mohamed ARRADI. All rights reserved.
  */
 
-"activate_dark_mode" = "Dark mode ON";
-"desactivate_dark_mode" = "Dark mode OFF";
+"activate_dark_mode" = "Dark Mode ON";
+"desactivate_dark_mode" = "Dark Mode OFF";
 "enable_start_up_login" = "Start up when launch";
 "settings" = "Preferences...";
 "quit_app" = "Quit App";
-"about" = "About DarkMode Switcher";
+"about" = "About Darky";
 "cancel" = "Cancel";
 "ok" = "OK";
 "product_is_up_to_date" = "Your app is up to date";
